--- a/index.html
+++ b/index.html
@@ -15,20 +15,17 @@
 
     <label for="regiao">Região:</label>
     <select id="regiao" name="regiao" required>
-        <option value="Suarão">Suarão</option>
-        <option value="Savoy">Savoy</option>
-        <option value="Oásis">Oásis</option>
-        <option value="Centro">Centro</option>
-        <option value="Belas Artes">Belas Artes</option>
-        <option value="CESP">CESP</option>
-        <option value="Gaivota">Gaivota</option>
+        <option value="Suarão">Suarão - R1</option>
+        <option value="Savoy">Savoy - R2</option>
+        <option value="Oásis">Oásis - R3</option>
+        <option value="Centro">Centro - R4</option>
+        <option value="Belas Artes">Belas Artes - R5</option>
+        <option value="CESP">CESP - R6</option>
+        <option value="Gaivota">Gaivota - R7</option>
     </select>
 
     <label for="nome">Nome:</label>
     <input type="text" id="nome" name="nome" required>
-
-    <label for="telefone">Telefone:</label>
-    <input type="tel" id="telefone" name="telefone" required>
 
     <label for="sexo">Sexo:</label>
     <select id="sexo" name="sexo" required>
@@ -101,6 +98,9 @@
         <option value="Não sei avaliar">Não sei avaliar</option>
     </select>
 
+    <label for="telefone">Telefone:</label>
+    <input type="tel" id="telefone" name="telefone" required>
+        
     <button type="submit">Enviar</button>
 </form>
 
