--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
         <option value="60 ou mais">60 ou mais</option>
     </select>
 
-    <label for="votoEspontaneo">Se as eleições fossem hoje, em quem você votária para prefeito de itanhaém:</label>
+    <label for="votoEspontaneo">Se as eleições fossem hoje, em quem você votária para prefeito de Itanhaém:</label>
     <input type="text" id="votoEspontaneo" name="votoEspontaneo" required>
 
-    <label for="votoCandidatos">E se as eleições fossem hoje, e estes candidatos em quem você votaria para prefeito de itanhaém?:</label>
+    <label for="votoCandidatos">E se as eleições fossem hoje, e estes candidatos em quem você votaria para prefeito de Itanhaém?:</label>
     <select id="votoCandidatos" name="votoCandidatos" required>
         <option value="Aureo Bacelar">Aureo Bacelar</option>
         <option value="Criss Forssell">Criss Forssell</option>
